--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -6,7 +6,7 @@
       "name": "EDA 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTdmv2z+KpSVY3DK6hZaia",
+      "authorship_tag": "ABX9TyP6mCdodUIKQVgVmGKrC1aD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1364,7 +1364,7 @@
       "source": [
         "EDA Project - Genral Information:\n",
         "\n",
-        "**Datasource link:** ***************************************\n",
+        "**Datasource link:** https://www.kaggle.com/yamaerenay/spotify-dataset-19212020-160k-tracks\n",
         "\n",
         "\n",
         "**Data:**\n",
